--- a/packages/main/src/themes/Dialog.css
+++ b/packages/main/src/themes/Dialog.css
@@ -21,5 +21,5 @@
 }
 
 .ui5-popup-content {
-	flex: 1;
+	flex: 1 0 auto;
 }
